# portfolio

./: .gitignore  Cargo.toml
assets/themes/: main.scss
src/: main.rs  types.rs
src/routes/: admin.rs  default.rs  mod.rs
templates/: 404.html  base.html  index.html
