[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-session = "0.7.1"
actix-files = "0.6.2"
mongodb = "2.3.0"
tera = "1.16.0"
tokio = "1.20.1"
serde_json = "1.0.82"
serde = "1.0.99"
tracing = "0.1.1"
tracing-actix-web = "0.6.0"
tracing-subscriber = "0.3.0"
tracing-bunyan-formatter = "0.3"
rand = "0.8.5"
lettre = "0.10.1"
bcrypt = "0.13.0"
grass = "0.11.0"
